Deployment/Loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  selector:
    app: tripviewer-pod
  ports:
    - port: 8080
      targetPort: 80
  type: LoadBalancer
