Deployment/Tripviewer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  labels:
    app: tripviewer
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer-pod
  template:
    metadata:
      labels:
        app: tripviewer-pod
    spec:
      containers:
      - name: tripviewer-pod
        image: registryygo2491.azurecr.io/tripviewer:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-public-svc
  namespace: frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: tripviewer-pod
