Deployment/user-java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  labels:
    app: user-java
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java-pod
  template:
    metadata:
      labels:
        app: user-java-pod
    spec:
      containers:
      - name: user-java-pod
        image: registryygo2491.azurecr.io/user-java:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-svc
  namespace: backend
spec:
  selector:
    app: user-java-pod
  ports:
    - protocol: TCP
      port: 8100
      targetPort: 8080
