Deployment/userprofile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  labels:
    app: userprofile
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile-pod
  template:
    metadata:
      labels:
        app: userprofile-pod
    spec:
      containers:
      - name: userprofile-pod
        image: registryygo2491.azurecr.io/userprofile:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-svc
  namespace: backend
spec:
  selector:
    app: userprofile-pod
  ports:
    - protocol: TCP
      port: 8102
      targetPort: 8080
