Deployment/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /api/poi/*
        backend:
          service:
            name: poi-svc
            port:
              number: 8103
        pathType: Prefix    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trips-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /api/trips/*
        backend:
          service:
            name: trips-svc
            port:
              number: 8104
        pathType: Prefix            
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userprofile-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /api/user/*
        backend:
          service:
            name: userprofile-svc
            port:
              number: 8102
        pathType: Prefix  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-java-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /api/user-java/*
        backend:
          service:
            name: user-java-svc
            port:
              number: 8100
        pathType: Prefix
