Deployment/trips.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  labels:
    app: trips
  namespace: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trips-pod
  template:
    metadata:
      labels:
        app: trips-pod
    spec:
      containers:
      - name: trips-pod
        image: registryygo2491.azurecr.io/trips:latest
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/secrets"
          readOnly: true 
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 8080
          timeoutSeconds: 30
        livenessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 8080      
          timeoutSeconds: 30          
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: trips-svc
  namespace: api
spec:
  selector:
    app: trips-pod
  ports:
    - protocol: TCP
      port: 8104
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trips-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /api/trips/*
        backend:
          service:
            name: trips-svc
            port:
              number: 8104
        pathType: Prefix
