Deployment/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-public-svc
  namespace: web
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: tripviewer-svc
            port:
              number: 80
        pathType: Exact
